# spdx-license-diff

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: DEVELOPMENT.md  TESTING.md
glossina/: __init__.py  cli.py  matcher.py  spdx_client.py
src/: cli.js  matcher.js  spdx-client.js
tests/: test_cli.py  test_matcher.py  test_spdx_client.py
